Fixed more info background not fitting

--- a/httproot/css/styles.css
+++ b/httproot/css/styles.css
@@ -171,6 +171,12 @@ body {
     left: 0;
     right: 0;
     width: 100%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 
     color: #433c2e;
     font-weight: bold;
